added new tags to have better structure and added a h1 and p tag for the header section.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Andrew's survey</title>
 </head>
 <body>
-    
+    <main>
+        <header>
+            <h1 id="title">Andy's Survey</h1>
+            <p id="description">This is a fun survey created by Andrew 
+                Rodriguez. The purpose of this survey is to show case my 
+                skills for making a form in HTML and CSS. Please enjoy
+                and please do give feedback. Thank you :)</p>
+        </header>
+    </main>
 </body>
 </html>
