Created a form and added a input field for users full name.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
         <header>
             <h1 id="title">Andy's Survey</h1>
             <p id="description">This is a fun survey created by Andrew 
-                Rodriguez. The purpose of this survey is to show case my 
+                Rodriguez. The purpose of this survey is to showcase my 
                 skills for making a form in HTML and CSS. Please enjoy
                 and please do give feedback. Thank you :)</p>
         </header>
+        <form id="survey-form">
+            <label for="name">Full Name:</label>
+            <br>
+            <input id="name" type="text" placeholder="Enter your name">
+
+        </form>
     </main>
 </body>
 </html>
