--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
             <label for="name">Full Name:</label>
             <br>
             <input id="name" type="text" placeholder="Enter your name">
-
+            <br>
+            <label for="email">Email:</label>
+            <br>
+            <input id="email" type="email" placeholder="Enter your email">
+            <br>
+            <label for="number">Age:</label>
+            <br>
+            <input id="number" type="number" placeholder="Age" min="5" max="140">
+            <br>
+            
         </form>
     </main>
 </body>
