--- a/index.html
+++ b/index.html
@@ -16,18 +16,49 @@
                 and please do give feedback. Thank you :)</p>
         </header>
         <form id="survey-form">
-            <label for="name">Full Name:</label>
+            <label id="name-label" for="name">Full Name:</label>
             <br>
             <input id="name" type="text" placeholder="Enter your name">
             <br>
-            <label for="email">Email:</label>
+            <label id="email-label" for="email">Email:</label>
             <br>
             <input id="email" type="email" placeholder="Enter your email">
             <br>
-            <label for="number">Age:</label>
+            <label id="number-label" for="number">Age:</label>
             <br>
             <input id="number" type="number" placeholder="Age" min="5" max="140">
             <br>
+            <label for="dropdown">Select what you use to get around.</label>
+            <br>
+            <select id="dropdown" aria-placeholder="Choose one">
+                <option value="" disabled selected hidden>Choose a vehicle</option>
+                <option value="truck">Truck</option>
+                <option value="car">Car</option>
+                <option value="electric-car">Electric Car/Truck</option>
+                <option value="no-car">No Car</option>
+            </select>
+            <br>
+            <label for="fav-color">Choose your favorite color:</label>
+            <br>
+            <input id="red" type="radio" name="fav-color" value="red">
+            <label for="red">Red</label>
+            <br>
+            <input id="blue" type="radio" name="fav-color" value="blue">
+            <label for="blue">Blue</label>
+            <br>
+            <input id="green" type="radio" name="fav-color" value="green">
+            <label for="green">Green</label>
+            <br>
+            <input id="pink" type="radio" name="fav-color" value="pink">
+            <label for="pink">Pink</label>
+            <br>
+            <input id="purple" type="radio" name="fav-color" value="purple">
+            <label for="purple">purple</label>
+            <br>
+            <input id="yellow" type="radio" name="fav-color" value="yellow">
+            <label for="yellow">Yellow</label>
+            <br>
+
             
         </form>
     </main>
