Chore:Added a checkbox form.

--- a/index.html
+++ b/index.html
@@ -58,9 +58,25 @@
             <input id="yellow" type="radio" name="fav-color" value="yellow">
             <label for="yellow">Yellow</label>
             <br>
-
             
+            <label  for="what-you-have">What do you have?</label>
+            <br>
+            <input id="dog" type="checkbox" name="what-you-have" value="dog">
+            <label for="dog">Dog</label>
+            <br>
+            <input id="cat" type="checkbox" name="what-you-have" value="cat">
+            <label for="cat">Cat</label>
+            <br>
+            <input id="donkey" type="checkbox" name="what-you-have" value="donkey">
+            <label for="donkey">Donkey</label>
+            <br>
+            <input id="chicken" type="checkbox" name="what-you-have" value="chicken">
+            <label for="chicken">Chicken</label>
+            <br>
+            <input id="fish" type="checkbox" name="what-you-have" value="fish">
+            <label for="fish">Fish</label>
+            <br>
         </form>
     </main>
 </body>
-</html>
+</html> 
