Chore: Added a textare and final submit button

--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
             <input id="fish" type="checkbox" name="what-you-have" value="fish">
             <label for="fish">Fish</label>
             <br>
+
+            <textarea id="comments"></textarea>
+            <br>
+            <button id="submit" type="submit">Submit</button>
+
         </form>
     </main>
 </body>
