Style: made textare width wider and changed font-family of p tags in survey-form

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <label for="comments">Write anything or share your social media account and I'll go check your 
                     profile out. Thank you for your time.</label>
                 <br>
-                <textarea id="comments"></textarea>
+                <textarea id="comments" class="input-textarea" placeholder="Enter your comment here"></textarea>
                 <br>
                 <button id="submit" type="submit" value="Submit">Submit</button>
             </div>
