Style: give survey-form a border color and a box-shadow. tried shifting inputs to take up a 100% width (CURRENTLY BROKEN).

--- a/index.html
+++ b/index.html
@@ -51,23 +51,28 @@
             <div class="form-group">
                 <label for="fav-color">Choose your favorite color:</label>
                 <br>
+                <label for="red">Red
                 <input id="red" type="radio" name="fav-color" value="red">
-                <label for="red">Red</label>
+                </label>
                 <br>
-                <input id="blue" type="radio" name="fav-color" value="blue">
-                <label for="blue">Blue</label>
+                <label for="blue">Blue
+                    <input id="blue" type="radio" name="fav-color" value="blue">
                 <br>
-                <input id="green" type="radio" name="fav-color" value="green">
                 <label for="green">Green</label>
+                    <input id="green" type="radio" name="fav-color" value="green">
+                </label>
                 <br>
-                <input id="pink" type="radio" name="fav-color" value="pink">
-                <label for="pink">Pink</label>
+                <label for="pink">Pink
+                    <input id="pink" type="radio" name="fav-color" value="pink">
+                </label>
                 <br>
-                <input id="purple" type="radio" name="fav-color" value="purple">
-                <label for="purple">purple</label>
+                <label for="purple">purple
+                    <input id="purple" type="radio" name="fav-color" value="purple">
+                </label>
                 <br>
-                <input id="yellow" type="radio" name="fav-color" value="yellow">
-                <label for="yellow">Yellow</label>
+                <label for="yellow">Yellow
+                    <input id="yellow" type="radio" name="fav-color" value="yellow">
+                </label>    
             </div>
 
             <br>
@@ -75,20 +80,25 @@
             <div class="form-group">
                 <label  for="what-you-have">What do you have?</label>
                 <br>
-                <input id="dog" type="checkbox" name="what-you-have" value="dog">
-                <label for="dog">Dog</label>
+                <label for="dog">Dog
+                    <input id="dog" type="checkbox" name="what-you-have" value="dog">
+                </label>
                 <br>
-                <input id="cat" type="checkbox" name="what-you-have" value="cat">
-                <label for="cat">Cat</label>
+                <label for="cat">Cat
+                    <input id="cat" type="checkbox" name="what-you-have" value="cat">
+                </label>
                 <br>
-                <input id="donkey" type="checkbox" name="what-you-have" value="donkey">
                 <label for="donkey">Donkey</label>
+                    <input id="donkey" type="checkbox" name="what-you-have" value="donkey">
+                </label>
                 <br>
-                <input id="chicken" type="checkbox" name="what-you-have" value="chicken">
                 <label for="chicken">Chicken</label>
+                    <input id="chicken" type="checkbox" name="what-you-have" value="chicken">
+                </label>
                 <br>
-                <input id="fish" type="checkbox" name="what-you-have" value="fish">
                 <label for="fish">Fish</label>
+                    <input id="fish" type="checkbox" name="what-you-have" value="fish">
+                </label>
             </div>
             
             <br>
