--- a/index.html
+++ b/index.html
@@ -50,27 +50,27 @@
             <fieldset>
             <label for="fav-color">Choose your favorite color:</label>
             <br>
-            <label for="red">Red
-            <input id="red" type="radio" name="fav-color" value="red">
+            <label for="red">
+            <input id="red" type="radio" name="fav-color" value="red">Red
             </label>
             <br>
-            <label for="blue">Blue
-                <input id="blue" type="radio" name="fav-color" value="blue">
+            <label for="blue">
+                <input id="blue" type="radio" name="fav-color" value="blue">Blue
             <br>
-            <label for="green">Green</label>
-                <input id="green" type="radio" name="fav-color" value="green">
+            <label for="green">
+                <input id="green" type="radio" name="fav-color" value="green">Green
             </label>
             <br>
-            <label for="pink">Pink
-                <input id="pink" type="radio" name="fav-color" value="pink">
+            <label for="pink">
+                <input id="pink" type="radio" name="fav-color" value="pink">Pink
             </label>
             <br>
-            <label for="purple">purple
-                <input id="purple" type="radio" name="fav-color" value="purple">
+            <label for="purple">
+                <input id="purple" type="radio" name="fav-color" value="purple">purple
             </label>
             <br>
-            <label for="yellow">Yellow
-                <input id="yellow" type="radio" name="fav-color" value="yellow">
+            <label for="yellow">
+                <input id="yellow" type="radio" name="fav-color" value="yellow">Yellow
             </label>  
             </fieldset>         
             
@@ -79,24 +79,24 @@
             <fieldset>
             <label  for="what-you-have">What do you have?</label>
             <br>
-            <label for="dog">Dog
-                <input id="dog" type="checkbox" name="what-you-have" value="dog">
+            <label for="dog">
+                <input id="dog" type="checkbox" name="what-you-have" value="dog">Dog
             </label>
             <br>
-            <label for="cat">Cat
-                <input id="cat" type="checkbox" name="what-you-have" value="cat">
+            <label for="cat">
+                <input id="cat" type="checkbox" name="what-you-have" value="cat">Cat
             </label>
             <br>
-            <label for="donkey">Donkey</label>
-                <input id="donkey" type="checkbox" name="what-you-have" value="donkey">
+            <label for="donkey">
+                <input id="donkey" type="checkbox" name="what-you-have" value="donkey">Donkey
             </label>
             <br>
-            <label for="chicken">Chicken</label>
-                <input id="chicken" type="checkbox" name="what-you-have" value="chicken">
+            <label for="chicken">
+                <input id="chicken" type="checkbox" name="what-you-have" value="chicken">Chicken
             </label>
             <br>
-            <label for="fish">Fish</label>
-                <input id="fish" type="checkbox" name="what-you-have" value="fish">
+            <label for="fish">
+                <input id="fish" type="checkbox" name="what-you-have" value="fish">Fish
             </label>
             </fieldset>
             
