Chore: centered button to the bottom-middle of form and extended textarea box.

--- a/index.html
+++ b/index.html
@@ -52,26 +52,27 @@
                 <label for="fav-color">Choose your favorite color:</label>
                 <br>
                 <label for="red">
-                <input id="red" type="radio" name="fav-color" value="red">Red
+                <input class="inline" id="red" type="radio" name="fav-color" value="red">Red
                 </label>
                 <br>
                 <label for="blue">
-                    <input id="blue" type="radio" name="fav-color" value="blue">Blue
+                    <input class="inline" id="blue" type="radio" name="fav-color" value="blue">Blue
+                </label>
                 <br>
                 <label for="green">
-                    <input id="green" type="radio" name="fav-color" value="green">Green
+                    <input class="inline" id="green" type="radio" name="fav-color" value="green">Green
                 </label>
                 <br>
                 <label for="pink">
-                    <input id="pink" type="radio" name="fav-color" value="pink">Pink
+                    <input class="inline" id="pink" type="radio" name="fav-color" value="pink">Pink
                 </label>
                 <br>
                 <label for="purple">
-                    <input id="purple" type="radio" name="fav-color" value="purple">purple
+                    <input class="inline" id="purple" type="radio" name="fav-color" value="purple">purple
                 </label>
                 <br>
                 <label for="yellow">
-                    <input id="yellow" type="radio" name="fav-color" value="yellow">Yellow
+                    <input class="inline" id="yellow" type="radio" name="fav-color" value="yellow">Yellow
                 </label>  
                 </fieldset>         
             
@@ -81,23 +82,23 @@
                 <label  for="what-you-have">What do you have?</label>
                 <br>
                 <label for="dog">
-                    <input id="dog" type="checkbox" name="what-you-have" value="dog">Dog
+                    <input class="inline" id="dog" type="checkbox" name="what-you-have" value="dog">Dog
                 </label>
                 <br>
                 <label for="cat">
-                    <input id="cat" type="checkbox" name="what-you-have" value="cat">Cat
+                    <input class="inline" id="cat" type="checkbox" name="what-you-have" value="cat">Cat
                 </label>
                 <br>
                 <label for="donkey">
-                    <input id="donkey" type="checkbox" name="what-you-have" value="donkey">Donkey
+                    <input class="inline" id="donkey" type="checkbox" name="what-you-have" value="donkey">Donkey
                 </label>
                 <br>
                 <label for="chicken">
-                    <input id="chicken" type="checkbox" name="what-you-have" value="chicken">Chicken
+                    <input class="inline" id="chicken" type="checkbox" name="what-you-have" value="chicken">Chicken
                 </label>
                 <br>
                 <label for="fish">
-                    <input id="fish" type="checkbox" name="what-you-have" value="fish">Fish
+                    <input class="inline" id="fish" type="checkbox" name="what-you-have" value="fish">Fish
                 </label>
             </fieldset>
             
@@ -107,10 +108,10 @@
                 <label for="comments">Write anything or share your social media account and I'll go check your 
                     profile out. Thank you for your time.</label>
                 <br>
-                <textarea id="comments" class="input-textarea" placeholder="Enter your comment here"></textarea>
+                <textarea id="comments" class="input-textarea" placeholder="Enter your comment here" rows="3" cols="30"></textarea>
                 <br>
             </fieldset>
-            <button id="submit" type="submit" value="Submit">Submit</button>
+            <input id="submit" type="submit" value="Submit" placeholder="Submit">
 
         </form>
     </main>
